Changelog for s6-rc.

In 0.5.5.0
----------

 - Bugfixes. These include a new API in libs6rc.
 - Install static libraries in /usr/lib by default.


In 0.5.4.3
----------

 - Bugfixes.


In 0.5.4.2
----------

 - Adaptation to skalibs-2.14.0.0.
 - Bugfixes.


In 0.5.4.1
----------

 - Bugfixes.


In 0.5.4.0
----------

 - Bugfixes.
 - New s6-rc commands: start (-u change) and stop (-d change).


In 0.5.3.3
----------

 - Bugfixes.
 - Adaptation to skalibs-2.13.0.0.


In 0.5.3.2
----------

 - Adaptation to skalibs-2.12.0.0.


In 0.5.3.1
----------

 - Bugfixes.


In 0.5.3.0
----------

 - s6-rc-compile now reads service dependencies and bundle contents
from directories, not from files. This makes it easier for package
managers to drop services in a source database without modifying
existing files. The old format is still supported.


In 0.5.2.3
----------

 - Adaptation to skalibs-2.11.0.0.
 - Adaptation to s6-2.11.0.0.
 - Bugfixes.


In 0.5.2.2
----------

 - Bugfixes.


In 0.5.2.1
----------

 - Adaptation to skalibs-2.10.0.0, execline-2.7.0.0 and s6-2.10.0.0


In 0.5.2.0
----------

 - "Essential services" support with the flag-essential file
and the new -D option to s6-rc.


In 0.5.1.4
----------

 - Bugfixes.


In 0.5.1.3
----------

 - Bugfixes.


In 0.5.1.2
----------

 - Bugfixes.


In 0.5.1.1
----------

 - Bugfixes.


In 0.5.1.0
----------

 - Adaptation to skalibs-2.9.0.0 and s6-2.9.0.0.


In 0.5.0.0
----------

 - Adaptation to skalibs-2.8.0.0 and s6-2.8.0.0.
 - Bugfixes.
 - s6-rc-compile doesn't support -u and -g anymore; the user who
can run s6-rc on a database is the user who owns the supervision tree.
 - Everything builds as PIC by default.


In 0.4.1.0
----------

 - Adaptation to skalibs-2.7.0.0 and s6-2.7.2.0.
 - Support for max-death-tally and down-signal files in a
longrun definition directory.


In 0.4.0.1
----------

 - Improved portability to (guess what) OpenBSD


In 0.4.0.0
----------
