@@ -39,6 +39,8 @@ dependency bumped to 2.14.3.0. </li>
 dependency bumped to 2.9.6.1. </li>
  <li> <a href="//skarnet.org/software/s6/">s6</a>
 dependency bumped to 2.13.1.0. </li>
+ <li> New function: <tt>s6rc_livedir_canon()</tt>. (Used to factor
+functionality for a bugfix.) </li>
  <li> Static libraries are installed in <tt>/usr/lib</tt> by default. </li>
 </ul>
 
