@@ -7,6 +7,8 @@ echo '# This file has been generated by tools/gen-deps.sh'
 echo '#'
 echo
 
+internal_libs=
+
 for dir in src/include/${package} src/* ; do
   for file in $(ls -1 $dir | grep -- \\.h$) ; do
     {
@@ -70,8 +72,12 @@ for dir in $(ls -1 src | grep -v ^include) ; do
     echo else
     echo "lib${file}.a.xyzzy:$(echo "$deps" | sed 's/\.o/.lo/g')"
     echo endif
-    echo "lib${file}.so.xyzzy: EXTRA_LIBS :=$libs"
-    echo "lib${file}.so.xyzzy:$(echo "$deps" | sed 's/\.o/.lo/g')"
+    if grep -E "^LIB_DEFS [+:]=" package/targets.mak | grep -qF "$file" ; then
+      echo "lib${file}.so.xyzzy: EXTRA_LIBS :=$libs"
+      echo "lib${file}.so.xyzzy:$(echo "$deps" | sed 's/\.o/.lo/g')"
+    else
+      internal_libs="$internal_libs lib${file}.a.xyzzy"
+    fi
   done
 
   for file in $(ls -1 src/$dir/deps-exe) ; do
@@ -91,3 +97,4 @@ for dir in $(ls -1 src | grep -v ^include) ; do
     echo "$file: src/$dir/$file.o$deps"
   done
 done
+echo "INTERNAL_LIBS :=$internal_libs"
